k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediasoup-poc
  labels:
    app.kubernetes.io/name: mediasoup-poc
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mediasoup-poc
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
