k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediasoup-poc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - liveproctoring.tpsentinel.com
      secretName: liveproctoring-tls
  rules:
    - host: liveproctoring.tpsentinel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mediasoup-poc
                port:
                  name: http
